control/chameleon_zf90.F90


  interface
     function CHAMELEON_ztrsm_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_ztrsm')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsm_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_ztrsm_c
  end interface

  interface
     function CHAMELEON_ztrsmpl_c(N,NRHS,A,LDA,descL,IPIV,B,LDB) &
          & bind(c, name='CHAMELEON_ztrsmpl')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmpl_c
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descL
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_ztrsmpl_c
  end interface

  interface
     function CHAMELEON_ztrsmrv_c(side,uplo,transA,diag,N,NRHS,alpha,A,LDA,B,LDB) &
          & bind(c, name='CHAMELEON_ztrsmrv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmrv_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_ztrsmrv_c
  end interface

  interface
     function CHAMELEON_ztrtri_c(uplo,diag,N,A,LDA) &
          & bind(c, name='CHAMELEON_ztrtri')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrtri_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: diag
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_ztrtri_c
  end interface

  interface
     function CHAMELEON_zunglq_c(M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zunglq')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunglq_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zunglq_c
  end interface

  interface
     function CHAMELEON_zungqr_c(M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zungqr')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zungqr_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zungqr_c
  end interface

  interface
     function CHAMELEON_zunmlq_c(side,trans,M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zunmlq')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunmlq_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zunmlq_c
  end interface

  interface
     function CHAMELEON_zunmqr_c(side,trans,M,N,K,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zunmqr')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zunmqr_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zunmqr_c
  end interface

  !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  !  FORTRAN API - math functions (native interface)
  !
  interface
     function CHAMELEON_zgebrd_Tile_c(A,D,E,T) &
          & bind(c, name='CHAMELEON_zgebrd_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgebrd_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: T
     end function CHAMELEON_zgebrd_Tile_c
  end interface

  interface
     function CHAMELEON_zgelqf_Tile_c(A,T) &
          & bind(c, name='CHAMELEON_zgelqf_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqf_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
     end function CHAMELEON_zgelqf_Tile_c
  end interface

  interface
     function CHAMELEON_zgelqs_Tile_c(A,T,B) &
          & bind(c, name='CHAMELEON_zgelqs_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqs_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zgelqs_Tile_c
  end interface

  interface
     function CHAMELEON_zgels_Tile_c(trans,A,T,B) &
          & bind(c, name='CHAMELEON_zgels_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgels_Tile_c
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zgels_Tile_c
  end interface

  interface
     function CHAMELEON_zgemm_Tile_c(transA,transB,alpha,A,B,beta,C) &
          & bind(c, name='CHAMELEON_zgemm_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgemm_Tile_c
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: transB
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
     end function CHAMELEON_zgemm_Tile_c
  end interface

  interface
     function CHAMELEON_zgeqrf_Tile_c(A,T) &
          & bind(c, name='CHAMELEON_zgeqrf_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrf_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
     end function CHAMELEON_zgeqrf_Tile_c
  end interface

  interface
     function CHAMELEON_zgeqrs_Tile_c(A,T,B) &
          & bind(c, name='CHAMELEON_zgeqrs_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrs_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: T
       type(c_ptr), value :: B
     end function CHAMELEON_zgeqrs_Tile_c
  end interface

  interface
     function CHAMELEON_zgesv_Tile_c(A,IPIV,B) &
          & bind(c, name='CHAMELEON_zgesv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
     end function CHAMELEON_zgesv_Tile_c
  end interface

  interface
     function CHAMELEON_zgesv_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='CHAMELEON_zgesv_incpiv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_incpiv_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
     end function CHAMELEON_zgesv_incpiv_Tile_c
  end interface

  interface
     function CHAMELEON_zgesvd_Tile_c(jobu,jobvt,A,S,U,VT,T) &
          & bind(c, name='CHAMELEON_zgesvd_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesvd_Tile_c
       integer(kind=c_int), value :: jobu
       integer(kind=c_int), value :: jobvt
       type(c_ptr), value :: A
       type(c_ptr), value :: S
       type(c_ptr), value :: U
       type(c_ptr), value :: VT
       type(c_ptr), value :: T
     end function CHAMELEON_zgesvd_Tile_c
  end interface

  interface
     function CHAMELEON_zgetrf_Tile_c(A,IPIV) &
          & bind(c, name='CHAMELEON_zgetrf_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetrf_Tile_c
  end interface

  interface
     function CHAMELEON_zgetrf_incpiv_Tile_c(A,L,IPIV) &
          & bind(c, name='CHAMELEON_zgetrf_incpiv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_incpiv_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetrf_incpiv_Tile_c
  end interface

  interface
     function CHAMELEON_zgetrf_nopiv_Tile_c(A) &
          & bind(c, name='CHAMELEON_zgetrf_nopiv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_nopiv_Tile_c
       type(c_ptr), value :: A
     end function CHAMELEON_zgetrf_nopiv_Tile_c
  end interface

  interface
     function CHAMELEON_zgetri_Tile_c(A,IPIV) &
          & bind(c, name='CHAMELEON_zgetri_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetri_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
     end function CHAMELEON_zgetri_Tile_c
  end interface

  interface
     function CHAMELEON_zgetrs_Tile_c(trans,A,IPIV,B) &
          & bind(c, name='CHAMELEON_zgetrs_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_Tile_c
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
     end function CHAMELEON_zgetrs_Tile_c
  end interface

  interface
     function CHAMELEON_zgetrs_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='CHAMELEON_zgetrs_incpiv_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_incpiv_Tile_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
     end function CHAMELEON_zgetrs_incpiv_Tile_c
  end interface

  interface
     function CHAMELEON_zheev_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='CHAMELEON_zheev_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheev_Tile_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
     end function CHAMELEON_zheev_Tile_c
  end interface
